--Version 0.7.0
1.在zookeeper中创建pinus目录，将pinus相关的信息放在此目录下.
2.添加Apache License
3.修改包名为org，将log4j替换为slf4j
4.添加简单的数据处理框架,提供单进程处理数据的方式

--Version 0.6.9
1.支持基于IQuery级别的二级缓存
2.优化缓存模块，添加默认缓存过期时间
3.fix bug
  3.1.部分缓存命中是取值为null
  3.2.in查询按顺序返回
4.清理过期的代码
5.支持不使用缓存的一套查询接口
6.支持实体与数据表结构同步

--Version 0.6.8
1.添加基于curator framework的分布式锁实现
2.之前版本的DistributeLock被标记为过去，不建议继续使用
3.数据库连接需要优化，支持Java容器连接池
4.fix bug
5.实现0.6.0版本之后的从库实现

--Version 0.6.7
1.fix bug
2.添加防止SQL注入功能
3.修复无法使用装箱的基本数据

--Version 0.6.6
1.fix bug
2.添加根据查询条件获取全局表数量
3.fix Text类型没有默认值的问题.
4.允许设置多个扫描包来加载实体对象.

--Version 0.6.5
1.代码优化
2.在IQuery中添加对某些field的查询.
3.完善根据sql语句进行查询, 支持同一分片数据的多表查询
  3.1.此类查询无法使用缓存.

--Version 0.6.4
1.每个数据实体的分片信息在进程启动时写入zookeeper中(Done)
2.开发pinus-cli工具方便对数据库的查询(Done)
3.调整项目的目录结构添加contrib目录(Done)
4.代码重构，DBCluster支持加载指定路径的配置文件 (Done)
5.添加FashionEntity对象, 继承此对象的Entity具备写入数据库的能力(Done)
  5.1.save()
  5.2.update()
  5.3.saveOrUpdate()
  5.4.remove()
6.在IQuery中添加对某些field的查询，此类查询先不走缓存(Done)

--Version 0.6.3
1.去除了ISharingEntity和IGlobalEntity接口，改为使用注解代替
2.优化update查询
3.修复update时缓存脏数据的bug

--Version 0.6.2
1.允许集群中不存在全局库，某些集群不需要全局信息
2.添加IShardingStorageClient可以创建集群锁

--Version 0.6.1
1.添加对redis缓存的支持(TODO)
2.去除集群数据遍历器，在分布式环境下此实现遍历器性能较低切使用场景不多 (Done)
3.添加根据实体对象获取此对象所有的分库分表引用 (Done)
4.添加FatDB对象，此对象提供查询接口(Done)
5.重构DB对象，不直接引用Connection而是引用DataSource对象 (Done)
6.当使用String做Sharding时由于String做哈希之后的值做归一化(TODO)
7.修改SQL日志格式
8.遗留问题
  8.1.当使用字符串进行sharding时，由于哈希之后的值无法确定，因此可能超过最大的region范围!!!
    每个hash算法都有一个最大值，一个集群需要覆盖这个hash值
  8.2.当添加region时，已有的哈希算法如何处理？
    只要已有的region的库表数量不变就行

--Version 0.6.0
1.重构IQuery代码，支持查询某些字段
2.添加遍历集群数据接口
2.1 FIXME 注意此接口目前是非线程安全的，因此不支持多线程调用和分布式调用，在后期版本里将支持此特性
3.添加读取单个实体集群总数接口
4.从库接口目前没有实现 (TODO)

--Version 0.5.0
1.添加线性扩展特性
  引入Region的概念，每个集群可以有一个或者多个Region用来管理数据
  
--Version 0.4.4
1. 去掉saveOrUpdate接口，此接口不属于基本操作，因此去掉
2. 重要修复cache相关的bug
  
--Version 0.4.3
1. 配置文件使用xml代替目前的properties文件

--Version 0.4.2
1. 添加IGlobalEntity和IShardingEntity接口用于标记实体对象是全局的还是分库分表的.