@@ -2,7 +2,10 @@
 1.在zookeeper中创建pinus目录，将pinus相关的信息放在此目录下.
 2.添加Apache License
 3.修改包名为org，将log4j替换为slf4j
-4.添加简单的数据处理框架,提供单进程处理数据的方式
+4.添加简单的数据处理框架,提供单进程处理数据的方式，目前只能简单的处理单个数据对象
+5.添加时序数据分片(TODO)
+  初步想法在每个sharding配置上设置时序周期，在数据对象注解使用shardingby配置shardingkey的value
+  使用shardingNum配置时序步长(小时、天、月)
 
 --Version 0.6.9
 1.支持基于IQuery级别的二级缓存
